logs/mobility/build.make.016.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:407:19: error: ‘CAP_ROTAITON’ was not declared in this scope
   blockYawError = CAP_ROTAITON;
                   ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
